# quent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pixi.toml
.github/: ops-bot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: checks.yml  cpp.yml  docker-build.yml  license-check.yml  markdown.yml  playwright-report-cleanup.yml  pr-title.yml  python.yml  rust.yml  ui.yml
crates/build-info/: Cargo.toml  build.rs
crates/build-info/src/: git.rs  lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: common.rs  cxx_bridge.rs  lib.rs  pyo3_bridge.rs  pyo3_stub.rs
crates/codegen/tests/: cxx_bridge_generation.rs  pyo3_bridge_generation.rs
crates/collector/client/: Cargo.toml
crates/collector/client/src/: lib.rs
crates/collector/server/: Cargo.toml
crates/collector/server/src/: lib.rs  server.rs
crates/constraints/: Cargo.toml
crates/constraints/src/: lib.rs  recursive_record.rs  unregistered_constraints.rs  unresolved_refs.rs  utils.rs
crates/constraints/tests/: validator.rs
crates/events/src/: lib.rs
crates/exporter/: Cargo.toml  build.rs
crates/exporter/callback/: Cargo.toml
crates/exporter/callback/src/: lib.rs
crates/exporter/collector/: Cargo.toml
crates/exporter/collector/src/: lib.rs
crates/exporter/msgpack/: Cargo.toml
crates/exporter/msgpack/src/: lib.rs
crates/exporter/ndjson/: Cargo.toml
crates/exporter/ndjson/src/: lib.rs
crates/exporter/postcard/: Cargo.toml
crates/exporter/postcard/src/: lib.rs
crates/exporter/src/: clap.rs  lib.rs
crates/exporter/types/src/: lib.rs
crates/fsm/: Cargo.toml
crates/fsm/src/: builder.rs  lib.rs
crates/fsm/tests/: fsm-constraint.rs
crates/instrumentation/: Cargo.toml
crates/instrumentation/benches/: README.md  event_emit.rs
crates/instrumentation/src/: lib.rs
crates/instrumentation/tests/: collector_roundtrip.rs  runtime_flavors.rs
crates/instrumentation/tests/common/: mod.rs
crates/model/: Cargo.toml
crates/model-macros/src/: entity_macro.rs  fsm_macro.rs  lib.rs  model_macro.rs  resource_derive.rs  state_macro.rs  util.rs
crates/model/src/: fsm_event.rs  lib.rs
crates/model/tests/: define_model.rs  fsm_macro.rs  state_macro.rs
crates/model/tests/compile_fail/: model_duplicate_components.rs  model_duplicate_components.stderr  model_empty.rs  model_empty.stderr  model_missing_root.rs  model_missing_root.stderr
crates/open/: Cargo.toml
crates/open/src/: error.rs  lib.rs  main.rs  spec.rs  viewer.rs  wrapper.rs
crates/ref-target/: Cargo.toml
crates/ref-target/src/: lib.rs
crates/ref-target/tests/: ref-target-constraint.rs
crates/ref-tree/: Cargo.toml
crates/ref-tree/src/: lib.rs
crates/ref-tree/tests/: ref-tree-constraint.rs
crates/schema/: Cargo.toml
crates/schema/src/: annotations.rs  builder.rs  constraint.rs  data_type.rs  entity.rs  event.rs  identifier.rs  lib.rs  metadata.rs  record.rs  test_utils.rs  visitor.rs
crates/schema/src/schema/: annotations.rs  constraint.rs  data_type.rs  entity.rs  event.rs  field.rs  identifier.rs  metadata.rs  mod.rs  record.rs
crates/schema/tests/: export_bindings.rs
crates/schema/ts/: .gitignore  package.json  tsconfig.json
crates/ui/src/timeline/: request.rs  response.rs
docs/: SUMMARY.md  faq.md
docs/domains/query_engine/: query_profile_diff.md
domains/query_engine/analyzer/src/: diff.rs  lib.rs  model.rs  ui.rs
domains/query_engine/server/: Cargo.toml
domains/query_engine/tests/fixed/: Cargo.toml
domains/query_engine/tests/fixed/src/: lib.rs  main.rs
domains/query_engine/tests/python/: README.md  pyproject.toml  test_query_engine.py
domains/query_engine/tests/python/bridge/: Cargo.toml  build.rs
domains/query_engine/tests/python/bridge/src/: lib.rs
domains/query_engine/tests/python/instrumentation/: Cargo.toml
domains/query_engine/tests/python/instrumentation/src/: lib.rs
examples/cpp-integration/: README.md
examples/cpp-integration/cpp/: .gitignore
examples/python-integration/: README.md  main.py  pyproject.toml
examples/python-integration/bridge/: Cargo.toml  build.rs
examples/python-integration/bridge/src/: lib.rs
examples/readme/: Cargo.toml
examples/readme/src/: lib.rs  main.rs
examples/simulator/application/: Cargo.toml
examples/simulator/instrumentation/: Cargo.toml
examples/simulator/server/: Cargo.toml  build.rs
ui/: .gitignore  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts  vitest.workspace.ts
ui/e2e/: global-setup.ts  helpers.ts  smoke.spec.ts  start-e2e-server.sh  timelines.spec.ts
ui/examples/: AGENTS.md
ui/examples/cars-pivot-poc/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
ui/examples/quent-pivot-table-panel/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/src/: index.css  main.tsx  vite-env.d.ts
ui/src/atoms/: statGroupTable.ts
ui/src/components/: ErrorBoundary.tsx  NavBarNavigator.tsx  QueryPlan.tsx  QueryResourceTree.test.tsx  QueryResourceTree.tsx  RouteError.tsx
ui/src/hooks/: useBulkTimelineFetch.ts  useBulkTimelines.ts  useExpandedIds.ts  useUrlStateSync.ts
ui/src/lib/: featureFlags.test.ts  featureFlags.ts  safeUrlState.ts  timeline.utils.bench.ts  timeline.utils.ts  treeStateParam.ts
ui/src/pages/: DiffPage.tsx  DiffSelectionPage.tsx  EngineSelectionPage.tsx
ui/src/routes/: __root.tsx  diff.engine.$engineId.query.$queryAId.compare.$queryBId.tsx  diff.engine.$queryAEngineId.query.$queryAId.compare.engine.$queryBEngineId.query.$queryBId.tsx  diff.index.tsx  diff.query.$baselineQueryId.compare.$comparisonQueryIds.tsx  diff.query.$baselineQueryId.compare.$competitorQueryIds.tsx  diff.query.$baselineQueryId.index.tsx  diff.test.tsx  diff.tsx  profile.engine.$engineId.query.$queryId.index.tsx  profile.engine.$engineId.query.$queryId.timeline.tsx  profile.engine.$engineId.query.$queryId.tsx
ui/src/services/: buildPivotedRows.test.ts
ui/src/test/: example.test.tsx  setup.ts
(+65 files in other folders)
