[workspace]
resolver = "3"
members = [
    # Application-agnostic crates
    "crates/analyzer",
    "crates/attributes",
    "crates/codegen",
    "crates/collector/server",
    "crates/collector/client",
    "crates/collector/proto",
    "crates/events",
    "crates/exporter",
    "crates/exporter/collector",
    "crates/exporter/msgpack",
    "crates/exporter/ndjson",
    "crates/exporter/postcard",
    "crates/exporter/types",
    "crates/instrumentation",
    "crates/model",
    "crates/model-macros",
    "crates/stdlib",
    "crates/time",
    "crates/ui",
    # Domain-specific crates
    "domains/query_engine/analyzer",
    "domains/query_engine/model",
    "domains/query_engine/server",
    "domains/query_engine/ui",
    # C++ integration example (uses readme model)
    "examples/cpp-integration/bridge",
    # Python integration example (uses readme model)
    "examples/python-integration/bridge",
    # Query engine C++ bridge test
    "domains/query_engine/tests/cpp/instrumentation",
    "domains/query_engine/tests/cpp/bridge",
    # Query engine Python bridge test
    "domains/query_engine/tests/python/instrumentation",
    "domains/query_engine/tests/python/bridge",
    # README example
    "examples/readme",
    # Simulator crates
    "examples/simulator/analyzer",
    "examples/simulator/application",
    "examples/simulator/instrumentation",
    "examples/simulator/server",
    "examples/simulator/ui",
    # Deterministic query-engine event emitter (opt-in via `-p`).
    # Activates `quent-time/__test-clock-override`; excluded from default-members
    # so default builds keep `quent-time` zero-cost.
    "domains/query_engine/tests/fixed",
    # Unused preliminary crates of https://github.com/rapidsai/quent/issues/191
    "crates/constraints",
    "crates/schema",
    "crates/ref-target",
    "crates/ref-tree",
    "crates/fsm",
]

# default-members excludes any crate that activates `quent-time/__test-clock-override`.
# `cargo build` and `cargo test` (no -p, no --workspace) skip those crates, preserving
# the zero-cost guarantee for everything else. Use `cargo build -p <crate>` to opt in.
default-members = [
    "crates/analyzer",
    "crates/attributes",
    "crates/codegen",
    "crates/collector/server",
    "crates/collector/client",
    "crates/collector/proto",
    "crates/events",
    "crates/exporter",
    "crates/exporter/collector",
    "crates/exporter/msgpack",
    "crates/exporter/ndjson",
    "crates/exporter/postcard",
    "crates/exporter/types",
    "crates/instrumentation",
    "crates/model",
    "crates/model-macros",
    "crates/stdlib",
    "crates/time",
    "crates/ui",
    "domains/query_engine/analyzer",
    "domains/query_engine/model",
    "domains/query_engine/server",
    "domains/query_engine/ui",
    "examples/cpp-integration/bridge",
    "domains/query_engine/tests/cpp/instrumentation",
    "domains/query_engine/tests/cpp/bridge",
    "examples/readme",
    "examples/simulator/analyzer",
    "examples/simulator/application",
    "examples/simulator/instrumentation",
    "examples/simulator/server",
    "examples/simulator/ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
indexmap = "2"
log = {version = "0.4.28", features = ["kv"]}
petgraph = "0.8.3"
postcard = { version = "1", features = ["alloc"] }
prost = "0.14.1"
pyo3 = "0.29"
rmp-serde = "1"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = {version = "1.15.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.18"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = "0.3"
ts-rs = "11.1.0"
uuid = {version = "1.18.1", features = ["v7"]}
