[package]
name = "quent-exporter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["ndjson", "msgpack", "postcard", "collector"]
ndjson = ["dep:quent-exporter-ndjson"]
msgpack = ["dep:quent-exporter-msgpack"]
postcard = ["dep:quent-exporter-postcard"]
collector = ["dep:quent-exporter-collector", "dep:http"]
clap = ["dep:clap", "dep:http"]

[dependencies]
clap = { version = "4.5.57", features = ["derive", "env"], optional = true }
http = { workspace = true, optional = true }
quent-events = { path = "../events" }
quent-exporter-types = { path = "types" }
quent-exporter-collector = { path = "collector", optional = true }
quent-exporter-msgpack = { path = "msgpack", optional = true }
quent-exporter-ndjson = { path = "ndjson", optional = true }
quent-exporter-postcard = { path = "postcard", optional = true }
serde.workspace = true
uuid.workspace = true
