[package]
name = "quent-ref-target"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
quent-schema = { path = "../schema", features = ["serde", "visitor"] }
quent-constraints = { path = "../constraints" }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
quent-schema = { path = "../schema", features = ["test-utils"] }
