[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[project]
name = "quent-readme"
version = "0.1.0"
requires-python = ">=3.11"

[tool.maturin]
manifest-path = "bridge/Cargo.toml"
module-name = "quent_readme"
include = [
  { path = "quent_readme/__init__.pyi", from = "out-dir", to = "" },
  { path = "quent_readme/py.typed", from = "out-dir", to = "" },
]
