[package]
name = "quent-collector"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
quent-collector-proto = { path = "../proto" }
quent-collector-client = { path = "../client" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
