[package]
name = "quent-readme-python"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "quent_readme"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["abi3-py311"] }
quent-readme-example = { path = "../../readme" }

[build-dependencies]
quent-codegen = { path = "../../../crates/codegen" }
quent-readme-example = { path = "../../readme" }
