[package]
name = "quent-qe-python-instrumentation"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
collector = ["quent-model/collector"]

[dependencies]
quent-model = { path = "../../../../../crates/model" }
quent-query-engine-model = { path = "../../../model" }
